Add functional chart and photo gallery button

--- a/FitIn/FitIn.entitlements
+++ b/FitIn/FitIn.entitlements
@@ -2,12 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Our app requires access to the camera to take progress photos.</string>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
 	<key>com.apple.security.network.client</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Our app requires access to the photo library to choose photos to track your progress.</string>
 	<key>com.apple.security.network.server</key>
 	<true/>
 </dict>
